--- a/render.yaml
+++ b/render.yaml
@@ -3,6 +3,7 @@ services:
     name: discord-translate-bot
     env: python
     plan: free
+    pythonVersion: 3.11.9
     buildCommand: pip install -r requirements.txt
     startCommand: python main.py
     autoDeploy: true
